initial commit - add timezones

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                         </div>
                         <div class="countdown-details">
                             <p class="countdown-description">Morning same-day processing window</p>
-                            <p class="next-deadline">Next deadline: <span id="same-day-1-next">--</span></p>
+                            <p class="next-deadline">Next deadline (ET): <span id="same-day-1-next">--</span></p>
+                            <p class="next-deadline-tz">UTC: <span id="same-day-1-next-utc">--</span></p>
+                            <p class="next-deadline-tz">Lisbon: <span id="same-day-1-next-lisbon">--</span></p>
+                            <p class="next-deadline-tz">Denver: <span id="same-day-1-next-denver">--</span></p>
                         </div>
                     </div>
 
@@ -48,7 +51,10 @@
                         </div>
                         <div class="countdown-details">
                             <p class="countdown-description">Afternoon same-day processing window</p>
-                            <p class="next-deadline">Next deadline: <span id="same-day-2-next">--</span></p>
+                            <p class="next-deadline">Next deadline (ET): <span id="same-day-2-next">--</span></p>
+                            <p class="next-deadline-tz">UTC: <span id="same-day-2-next-utc">--</span></p>
+                            <p class="next-deadline-tz">Lisbon: <span id="same-day-2-next-lisbon">--</span></p>
+                            <p class="next-deadline-tz">Denver: <span id="same-day-2-next-denver">--</span></p>
                         </div>
                     </div>
 
@@ -62,7 +68,10 @@
                         </div>
                         <div class="countdown-details">
                             <p class="countdown-description">Late afternoon same-day processing window</p>
-                            <p class="next-deadline">Next deadline: <span id="same-day-3-next">--</span></p>
+                            <p class="next-deadline">Next deadline (ET): <span id="same-day-3-next">--</span></p>
+                            <p class="next-deadline-tz">UTC: <span id="same-day-3-next-utc">--</span></p>
+                            <p class="next-deadline-tz">Lisbon: <span id="same-day-3-next-lisbon">--</span></p>
+                            <p class="next-deadline-tz">Denver: <span id="same-day-3-next-denver">--</span></p>
                         </div>
                     </div>
 
@@ -77,7 +86,10 @@
                         </div>
                         <div class="countdown-details">
                             <p class="countdown-description">Early morning next-day processing window</p>
-                            <p class="next-deadline">Next deadline: <span id="next-day-1-next">--</span></p>
+                            <p class="next-deadline">Next deadline (ET): <span id="next-day-1-next">--</span></p>
+                            <p class="next-deadline-tz">UTC: <span id="next-day-1-next-utc">--</span></p>
+                            <p class="next-deadline-tz">Lisbon: <span id="next-day-1-next-lisbon">--</span></p>
+                            <p class="next-deadline-tz">Denver: <span id="next-day-1-next-denver">--</span></p>
                         </div>
                     </div>
 
@@ -91,7 +103,10 @@
                         </div>
                         <div class="countdown-details">
                             <p class="countdown-description">Evening next-day processing window</p>
-                            <p class="next-deadline">Next deadline: <span id="next-day-2-next">--</span></p>
+                            <p class="next-deadline">Next deadline (ET): <span id="next-day-2-next">--</span></p>
+                            <p class="next-deadline-tz">UTC: <span id="next-day-2-next-utc">--</span></p>
+                            <p class="next-deadline-tz">Lisbon: <span id="next-day-2-next-lisbon">--</span></p>
+                            <p class="next-deadline-tz">Denver: <span id="next-day-2-next-denver">--</span></p>
                             <p class="window-restriction">Sunday through Thursday only</p>
                         </div>
                     </div>
@@ -106,7 +121,10 @@
                         </div>
                         <div class="countdown-details">
                             <p class="countdown-description">Late evening next-day processing window</p>
-                            <p class="next-deadline">Next deadline: <span id="next-day-3-next">--</span></p>
+                            <p class="next-deadline">Next deadline (ET): <span id="next-day-3-next">--</span></p>
+                            <p class="next-deadline-tz">UTC: <span id="next-day-3-next-utc">--</span></p>
+                            <p class="next-deadline-tz">Lisbon: <span id="next-day-3-next-lisbon">--</span></p>
+                            <p class="next-deadline-tz">Denver: <span id="next-day-3-next-denver">--</span></p>
                         </div>
                     </div>
                 </div>
