fix the countdown

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <section class="section">
                 <div class="section-header">
                     <h2>Live Countdowns</h2>
-                    <p class="section-description">Time remaining until next submission deadline</p>
+                    <p class="section-description">Time remaining until next submission deadline (in your local time)</p>
                 </div>
                 
                 <div class="countdown-grid">
